# monorepo

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod
experimental/: BUILD.bazel
experimental/hello/: BUILD.bazel  hello.go
experimental/netlink/: go.mod
experimental/nwhello/: BUILD.bazel  go.mod  nwhello.go
