load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hello",
    embed = [":experimental_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "experimental_lib",
    srcs = ["hello.go"],
    importpath = "chr141.com/repos/monorepo/experimental",
    visibility = ["//visibility:private"],
)
